force-app/main/default/objects/User/fields/HasSecretKeyConfigured__c.field-meta.xml
<CustomField>
    <fullName>HasSecretKeyConfigured__c</fullName>
    <description>Flag indicatoing that Secret Key has been successfully configured</description>
    <formula>SecretKey__c != NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Secret Key Configured ?</label>
    <type>Checkbox</type>
</CustomField>