force-app/main/default/objects/User/fields/KeeperSecretKey__c.field-meta.xml
<CustomField>
    <fullName>KeeperSecretKey__c</fullName>
    <description>Secret key to encrypt all user-defined credentials</description>
    <inlineHelpText>Secret key to encrypt all user-defined credentials</inlineHelpText>
    <label>Keeper Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>