force-app/main/default/objects/User/fields/SecretKey__c.field-meta.xml
<CustomField>
    <fullName>SecretKey__c</fullName>
    <description>Encoded Secret key to encrypt all user-defined credentials.</description>
    <inlineHelpText>Encoded Secret key to encrypt all user-defined credentials</inlineHelpText>
    <label>Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>